--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "360°-image-generator",
+  "name": "magicspin360",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Turn a single product or character image into an interactive 360° experience powered by Gemini.",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "check": "npm run typecheck && npm run build"
   },
   "dependencies": {
     "@google/genai": "^1.17.0",
@@ -17,5 +20,8 @@
     "@types/node": "^22.14.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
